--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/core": "^4.0.2",
     "axios": "^0.19.0",
     "pg": "^7.11.0",
     "react": "^16.7.0",
